# seqr

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO  list.c  list.h  main.c  makefile  raw2wav.sh  seq.c  seqr.c  seqr.h  ui.c  ui.h  wav2ogg.sh
src/: Makefile  list.c  list.h  main.c  seqr.c  seqr.h  song.c  song.h  ui.c  ui.h  vect.c  vect.h  wav.c  wav.h
